# WasmNoise

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  buildwasmnoise.py  constructautoloader.py  getexports.py  removeextraexports.py  version.ini  wasmnoiseexports.json
attempt1/include/: perlin.hpp  permutationtable.hpp  point3.hpp  point4.hpp  pointmath.hpp  splitmix64 - Copy.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vectors.hpp  xoroshiro128plus - Copy.hpp  xoroshiro128plus.hpp
attempt1/source/: perlin.cpp
html/: autoloadertest.html  cellulartest.html  fractalcellulartest.html  fractalimagetest.html  imagetest.html  imagetest2.html  speedtest.html  speedtestv2.html  wasmnoise.autoloader.js
include/: gradients.hpp  perlin.hpp  permutationtable.hpp  point2.hpp  point3.hpp  point4.hpp  pointmath.hpp  points.hpp  splitmix64.hpp  xoroshiro128plus.hpp
sidemoduletest/: doubler++.wasm  doubler.c  doubler.html  doubler.wasm  mywasm.cpp  mywasm.wasm  return.wasm  returntypetest.cpp
source/: ReturnArrayHelper.hpp  WasmNoise.Cellular.hpp  WasmNoise.Common.hpp  WasmNoise.Fractal.hpp  WasmNoise.Perlin.hpp  WasmNoise.Simplex.hpp  WasmNoise.cpp  WasmNoise.hpp  WasmNoiseInterface.cpp  defineconfig.hpp  independent_bits_engine.hpp  invoke.hpp  limits.hpp  numeric_limits.hpp  splitmix64.hpp  type_traits.hpp  types.hpp  uniform_int_distribution.hpp  xoroshiro128plus.hpp
source/memory-bitcode/: memory.bc
